# fast-flux

./: Chart.yaml  Dockerfile  README.rst  k3d.README.md  pyproject.toml  values.yaml
.cicd/: ci.yaml  ci_input_set.yaml  ci_testing.yaml  deploy.yaml  deploy_input.yaml  merge.yaml  pr_input_set.yaml
.cide/: deploy.yaml
e2e_tests/: Dockerfile  test_response.py
fast_flux/: main.py
templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
templates/tests/: test-connection.yaml  test-e2e.yaml
tests/: test_fast_flux.py
