[tool.poetry]
name = "fast-flux"
version = "0.1.0"
description = ""
authors = ["Carson Gee <carson.gee@datarobot.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
